deployments/exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exporter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exporter
  template:
    metadata:
      labels:
        app: exporter
    spec:
      containers:
      - name: exporter-deployment
        image: mmkorshunova/metrics-exporter:latest
        ports:
        - containerPort: 8000
