deployments/exporter-service.yaml
apiVersion: app/v1
kind: Service
metadata:
  name: exporter-service
  labels:
    app: exporter
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: exporter
