deployments/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-app
spec:
  hosts:
  - "*"
  gateways:
  - gateway-app
  http:
  - match:
    - uri:
        exact: /time
    route:
    - destination:
        host: app-service
        port:
          number: 5000
  - match:
    - uri:
        exact: /statistics
    route:
    - destination:
        host: app-service
        port:
          number: 5000
